<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_panel</name>
  <version>0.0.0</version>
  <description>The control_panel package</description>
  <maintainer email="marc-antoine.maheux@usherbrooke.ca">Marc-Antoine Maheux</maintainer>
  <license>GPL-3.0 license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>audio_analyzer</depend>
  <depend>audio_utils</depend>
  <depend>gesture</depend>
  <depend>person_identification</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>talk</depend>
  <depend>video_analyzer</depend>
  <depend>hbba_lite</depend>
  <depend>t_top_hbba_lite</depend>
  <depend>speech_to_text</depend>
  <depend>led_animations</depend>
  <depend>daemon_ros_client</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
