<?xml version="1.0"?>
<package format="2">
  <name>home_logger</name>
  <version>0.0.0</version>
  <description>The home_logger package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marc-antoine@todo.todo">marc-antoine</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/home_logger</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>audio_analyzer</build_depend>
  <build_depend>cloud_data</build_depend>
  <build_depend>gesture</build_depend>
  <build_depend>hbba_lite</build_depend>
  <build_depend>person_identification</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>speech_to_text</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>t_top_hbba_lite</build_depend>
  <build_depend>talk</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>video_analyzer</build_depend>
  <build_depend>recorders</build_depend>
  <build_depend>led_animations</build_depend>
  <build_depend>daemon_ros_client</build_depend>
  <build_export_depend>audio_analyzer</build_export_depend>
  <build_export_depend>cloud_data</build_export_depend>
  <build_export_depend>gesture</build_export_depend>
  <build_export_depend>hbba_lite</build_export_depend>
  <build_export_depend>person_identification</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>speech_to_text</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>t_top_hbba_lite</build_export_depend>
  <build_export_depend>talk</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>video_analyzer</build_export_depend>
  <build_export_depend>recorders</build_export_depend>
  <build_export_depend>led_animations</build_export_depend>
  <build_export_depend>daemon_ros_client</build_export_depend>
  <exec_depend>audio_analyzer</exec_depend>
  <exec_depend>cloud_data</exec_depend>
  <exec_depend>gesture</exec_depend>
  <exec_depend>hbba_lite</exec_depend>
  <exec_depend>person_identification</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>speech_to_text</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>t_top_hbba_lite</exec_depend>
  <exec_depend>talk</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>video_analyzer</exec_depend>
  <exec_depend>recorders</exec_depend>
  <exec_depend>led_animations</exec_depend>
  <exec_depend>daemon_ros_client</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
